@@ -38,8 +38,8 @@ if [ $errCode -ne 0 ]
 then
   exit $errCode
 fi
-"$bin"/hbase-daemon.sh --config="${HADOOP_CONF_DIR}" \
-    --hbaseconfig="${HBASE_CONF_DIR}" master start
-"$bin"/hbase-daemons.sh --config="${HADOOP_CONF_DIR}" \
-    --hbaseconfig="${HBASE_CONF_DIR}" --hadoop="${HADOOP_HOME}" \
-    --hosts="${HBASE_REGIONSERVERS}" regionserver start
+"$bin"/hbase-daemon.sh --config "${HADOOP_CONF_DIR}" \
+    --hbaseconfig "${HBASE_CONF_DIR}" master start
+"$bin"/hbase-daemons.sh --config "${HADOOP_CONF_DIR}" \
+    --hbaseconfig "${HBASE_CONF_DIR}" --hadoop "${HADOOP_HOME}" \
+    --hosts "${HBASE_REGIONSERVERS}" regionserver start
