@@ -29,5 +29,5 @@ bin=`cd "$bin"; pwd`
 
 . "$bin"/hbase-config.sh
 
-"$bin"/hbase-daemon.sh --config="${HADOOP_CONF_DIR}" \
-    --hbaseconfig="${HBASE_CONF_DIR}" master stop
+"$bin"/hbase-daemon.sh --config "${HADOOP_CONF_DIR}" \
+    --hbaseconfig "${HBASE_CONF_DIR}" master stop
